@@ -4,20 +4,19 @@ package com.jetbrains.youtrack.db.internal.core.sql.parser;
 
 import com.jetbrains.youtrack.db.api.exception.CommandExecutionException;
 import com.jetbrains.youtrack.db.api.exception.DatabaseException;
+import com.jetbrains.youtrack.db.api.record.Identifiable;
 import com.jetbrains.youtrack.db.api.schema.Collate;
-import com.jetbrains.youtrack.db.api.schema.PropertyType;
 import com.jetbrains.youtrack.db.api.schema.SchemaClass;
 import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
+import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionEmbedded;
 import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
 import com.jetbrains.youtrack.db.internal.core.index.Index;
 import com.jetbrains.youtrack.db.internal.core.index.IndexDefinition;
 import com.jetbrains.youtrack.db.internal.core.index.IndexDefinitionFactory;
 import com.jetbrains.youtrack.db.internal.core.index.IndexException;
-import com.jetbrains.youtrack.db.internal.core.index.IndexFactory;
-import com.jetbrains.youtrack.db.internal.core.index.Indexes;
 import com.jetbrains.youtrack.db.internal.core.index.SimpleKeyIndexDefinition;
-import com.jetbrains.youtrack.db.internal.core.metadata.schema.SchemaClassImpl;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
+import com.jetbrains.youtrack.db.internal.core.metadata.schema.PropertyTypeInternal;
+import com.jetbrains.youtrack.db.internal.core.metadata.schema.SchemaClassInternal;
 import com.jetbrains.youtrack.db.internal.core.sql.SQLEngine;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.ResultInternal;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.resultset.ExecutionStream;
@@ -28,6 +27,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 
 public class SQLCreateIndexStatement extends DDLStatement {
 
@@ -58,9 +58,9 @@ public class SQLCreateIndexStatement extends DDLStatement {
 
   @Override
   public ExecutionStream executeDDL(CommandContext ctx) {
-    Object execResult = execute(ctx);
+    var execResult = execute(ctx);
     if (execResult != null) {
-      ResultInternal result = new ResultInternal(ctx.getDatabase());
+      var result = new ResultInternal(ctx.getDatabaseSession());
       result.setProperty("operation", "create index");
       result.setProperty("name", name.getValue());
       return ExecutionStream.singleton(result);
@@ -69,97 +69,90 @@ public class SQLCreateIndexStatement extends DDLStatement {
     }
   }
 
+  @Nullable
   Object execute(CommandContext ctx) {
-    final DatabaseSessionInternal database = ctx.getDatabase();
+    final var session = (DatabaseSessionEmbedded) ctx.getDatabaseSession();
 
-    if (database.getMetadata().getIndexManagerInternal().existsIndex(name.getValue())) {
+    if (session.getSharedContext().getIndexManager().existsIndex(session, name.getValue())) {
       if (ifNotExists) {
         return null;
       } else {
-        throw new CommandExecutionException("Index " + name + " already exists");
+        throw new CommandExecutionException(session, "Index " + name + " already exists");
       }
     }
 
     final Index idx;
-    List<Collate> collatesList = calculateCollates(ctx);
-    String engine =
+    var collatesList = calculateCollates(ctx);
+    var engine =
         this.engine == null ? null : this.engine.getStringValue().toUpperCase(Locale.ENGLISH);
-    EntityImpl metadataDoc = calculateMetadata(ctx);
+    var metadata = calculateMetadata(ctx);
 
-    if (propertyList == null || propertyList.size() == 0) {
-      IndexFactory factory = Indexes.getFactory(type.getStringValue(), engine);
+    if (propertyList == null || propertyList.isEmpty()) {
+      var keyTypes = calculateKeyTypes(ctx);
 
-      PropertyType[] keyTypes = calculateKeyTypes(ctx);
-
-      if (keyTypes != null && keyTypes.length > 0) {
+      if (keyTypes.length > 0) {
         idx =
-            database
-                .getMetadata()
-                .getIndexManagerInternal()
+            session
+                .getSharedContext()
+                .getIndexManager()
                 .createIndex(
-                    database,
+                    session,
                     name.getValue(),
                     type.getStringValue(),
                     new SimpleKeyIndexDefinition(keyTypes, collatesList),
                     null,
                     null,
-                    metadataDoc != null ? metadataDoc.toMap() : null,
+                    metadata,
                     engine);
-      } else if (keyTypes != null
-          && keyTypes.length == 0
-          && "LUCENE_CROSS_CLASS".equalsIgnoreCase(engine)) {
+      } else if ("LUCENE_CROSS_CLASS".equalsIgnoreCase(engine)) {
         // handle special case of cross class  Lucene index: awful but works
         IndexDefinition keyDef =
-            new SimpleKeyIndexDefinition(new PropertyType[]{PropertyType.STRING}, collatesList);
+            new SimpleKeyIndexDefinition(new PropertyTypeInternal[]{PropertyTypeInternal.STRING},
+                collatesList);
         idx =
-            database
-                .getMetadata()
-                .getIndexManagerInternal()
+            session
+                .getSharedContext()
+                .getIndexManager()
                 .createIndex(
-                    database,
+                    session,
                     name.getValue(),
                     type.getStringValue(),
                     keyDef,
                     null,
                     null,
-                    metadataDoc.toMap(),
+                    metadata,
                     engine);
 
-      } else if (className == null && keyTypes == null || keyTypes.length == 0) {
+      } else {
         // legacy: create index without specifying property names
-        String[] split = name.getValue().split("\\.");
+        var split = name.getValue().split("\\.");
         if (split.length != 2) {
-          throw new DatabaseException(
+          throw new DatabaseException(session,
               "Impossible to create an index without specify class and property name nor key types:"
                   + " "
                   + this);
         }
-        SchemaClass oClass = database.getClass(split[0]);
+        var oClass = session.getClass(split[0]);
         if (oClass == null) {
-          throw new DatabaseException(
+          throw new DatabaseException(session,
               "Impossible to create an index, class not found: " + split[0]);
         }
-        if (oClass.getProperty(database, split[1]) == null) {
-          throw new DatabaseException(
+        if (oClass.getProperty(split[1]) == null) {
+          throw new DatabaseException(session,
               "Impossible to create an index, property not found: " + name.getValue());
         }
-        String[] fields = new String[]{split[1]};
-        idx = getoIndex(oClass, fields, engine, database, collatesList, metadataDoc);
+        var fields = new String[]{split[1]};
+        idx = getoIndex(oClass, fields, engine, session, collatesList, metadata);
 
-      } else {
-        throw new DatabaseException(
-            "Impossible to create an index without specify the key type or the associated property:"
-                + " "
-                + this);
       }
     } else {
-      String[] fields = calculateProperties(ctx);
-      SchemaClass oClass = getIndexClass(ctx);
-      idx = getoIndex(oClass, fields, engine, database, collatesList, metadataDoc);
+      var fields = calculateProperties(ctx);
+      var oClass = getIndexClass(ctx);
+      idx = getoIndex(oClass, fields, engine, session, collatesList, metadata);
     }
 
     if (idx != null) {
-      return database.computeInTx(() -> idx.getInternal().size(database));
+      return session.computeInTx(transaction -> idx.size(session));
     }
 
     return null;
@@ -169,22 +162,22 @@ public class SQLCreateIndexStatement extends DDLStatement {
       SchemaClass oClass,
       String[] fields,
       String engine,
-      DatabaseSessionInternal database,
+      DatabaseSessionInternal session,
       List<Collate> collatesList,
-      EntityImpl metadataDoc) {
+      Map<String, Object> metadata) {
     Index idx;
-    if ((keyTypes == null || keyTypes.size() == 0) && collatesList == null) {
-      String indexName = name.getValue();
-      oClass.createIndex(database,
-          indexName, type.getStringValue(), null, metadataDoc != null ? metadataDoc.toMap() : null,
+    if ((keyTypes == null || keyTypes.isEmpty()) && collatesList == null) {
+      var indexName = name.getValue();
+      oClass.createIndex(
+          indexName, type.getStringValue(), null, metadata,
           engine, fields);
-      idx = database.getIndex(indexName);
+      idx = session.getIndex(indexName);
     } else {
-      final List<PropertyType> fieldTypeList;
-      if (keyTypes == null || keyTypes.size() == 0 && fields.length > 0) {
-        for (final String fieldName : fields) {
-          if (!fieldName.equals("@rid") && !oClass.existsProperty(database, fieldName)) {
-            throw new IndexException(
+      final List<PropertyTypeInternal> fieldTypeList;
+      if (keyTypes == null || keyTypes.isEmpty() && fields.length > 0) {
+        for (final var fieldName : fields) {
+          if (!fieldName.equals("@rid") && !oClass.existsProperty(fieldName)) {
+            throw new IndexException(session,
                 "Index with name : '"
                     + name.getValue()
                     + "' cannot be created on class : '"
@@ -194,36 +187,34 @@ public class SQLCreateIndexStatement extends DDLStatement {
                     + "' is absent in class definition.");
           }
         }
-        fieldTypeList = ((SchemaClassImpl) oClass).extractFieldTypes(database, fields);
+        fieldTypeList = ((SchemaClassInternal) oClass).extractFieldTypes(fields);
       } else {
         fieldTypeList =
             keyTypes.stream()
-                .map(x -> PropertyType.valueOf(x.getStringValue()))
+                .map(x -> PropertyTypeInternal.valueOf(x.getStringValue()))
                 .collect(Collectors.toList());
       }
 
-      final IndexDefinition idxDef =
+      final var idxDef =
           IndexDefinitionFactory.createIndexDefinition(
-              database,
               oClass,
               Arrays.asList(fields),
               fieldTypeList,
               collatesList,
-              type.getStringValue(),
-              engine);
+              type.getStringValue());
 
       idx =
-          database
-              .getMetadata()
-              .getIndexManagerInternal()
+          session
+              .getSharedContext()
+              .getIndexManager()
               .createIndex(
-                  database,
+                  session,
                   name.getValue(),
                   type.getStringValue(),
                   idxDef,
-                  oClass.getPolymorphicClusterIds(),
+                  oClass.getPolymorphicCollectionIds(),
                   null,
-                  metadataDoc != null ? metadataDoc.toMap() : null,
+                  metadata,
                   engine);
     }
     return idx;
@@ -235,6 +226,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
    * @param ctx
    * @return
    */
+  @Nullable
   private String[] calculateProperties(CommandContext ctx) {
     if (propertyList == null) {
       return null;
@@ -248,14 +240,15 @@ public class SQLCreateIndexStatement extends DDLStatement {
   /**
    * calculates the indexed class based on the class name
    */
+  @Nullable
   private SchemaClass getIndexClass(CommandContext ctx) {
     if (className == null) {
       return null;
     }
-    SchemaClass result =
-        ctx.getDatabase().getMetadata().getSchema().getClass(className.getStringValue());
+    var session = ctx.getDatabaseSession();
+    var result = session.getMetadata().getSchema().getClass(className.getStringValue());
     if (result == null) {
-      throw new CommandExecutionException("Cannot find class " + className);
+      throw new CommandExecutionException(session, "Cannot find class " + className);
     }
     return result;
   }
@@ -263,30 +256,32 @@ public class SQLCreateIndexStatement extends DDLStatement {
   /**
    * returns index metadata as an ODocuemnt (as expected by Index API)
    */
-  private EntityImpl calculateMetadata(CommandContext ctx) {
+  @Nullable
+  private Map<String, Object> calculateMetadata(CommandContext ctx) {
     if (metadata == null) {
       return null;
     }
-    return metadata.toDocument(null, ctx);
+    return metadata.toMap((Identifiable) null, ctx);
   }
 
-  private PropertyType[] calculateKeyTypes(CommandContext ctx) {
+  private PropertyTypeInternal[] calculateKeyTypes(CommandContext ctx) {
     if (keyTypes == null) {
-      return new PropertyType[0];
+      return new PropertyTypeInternal[0];
     }
     return keyTypes.stream()
-        .map(x -> PropertyType.valueOf(x.getStringValue()))
-        .collect(Collectors.toList())
-        .toArray(new PropertyType[]{});
+        .map(x -> PropertyTypeInternal.valueOf(x.getStringValue()))
+        .toList()
+        .toArray(new PropertyTypeInternal[]{});
   }
 
+  @Nullable
   private List<Collate> calculateCollates(CommandContext ctx) {
     List<Collate> result = new ArrayList<>();
-    boolean found = false;
-    for (Property prop : this.propertyList) {
-      String collate = prop.collate == null ? null : prop.collate.getStringValue();
+    var found = false;
+    for (var prop : this.propertyList) {
+      var collate = prop.collate == null ? null : prop.collate.getStringValue();
       if (collate != null) {
-        final Collate col = SQLEngine.getCollate(collate);
+        final var col = SQLEngine.getCollate(collate);
         result.add(col);
         found = true;
       } else {
@@ -307,8 +302,8 @@ public class SQLCreateIndexStatement extends DDLStatement {
       builder.append(" ON ");
       className.toString(params, builder);
       builder.append(" (");
-      boolean first = true;
-      for (Property prop : propertyList) {
+      var first = true;
+      for (var prop : propertyList) {
         if (!first) {
           builder.append(", ");
         }
@@ -337,9 +332,9 @@ public class SQLCreateIndexStatement extends DDLStatement {
       engine.toString(params, builder);
     }
     if (keyTypes != null && keyTypes.size() > 0) {
-      boolean first = true;
+      var first = true;
       builder.append(" ");
-      for (SQLIdentifier keyType : keyTypes) {
+      for (var keyType : keyTypes) {
         if (!first) {
           builder.append(",");
         }
@@ -361,8 +356,8 @@ public class SQLCreateIndexStatement extends DDLStatement {
       builder.append(" ON ");
       className.toGenericStatement(builder);
       builder.append(" (");
-      boolean first = true;
-      for (Property prop : propertyList) {
+      var first = true;
+      for (var prop : propertyList) {
         if (!first) {
           builder.append(", ");
         }
@@ -391,9 +386,9 @@ public class SQLCreateIndexStatement extends DDLStatement {
       engine.toGenericStatement(builder);
     }
     if (keyTypes != null && keyTypes.size() > 0) {
-      boolean first = true;
+      var first = true;
       builder.append(" ");
-      for (SQLIdentifier keyType : keyTypes) {
+      for (var keyType : keyTypes) {
         if (!first) {
           builder.append(",");
         }
@@ -409,7 +404,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
 
   @Override
   public SQLCreateIndexStatement copy() {
-    SQLCreateIndexStatement result = new SQLCreateIndexStatement(-1);
+    var result = new SQLCreateIndexStatement(-1);
     result.name = name == null ? null : name.copy();
     result.className = className == null ? null : className.copy();
     result.propertyList =
@@ -433,7 +428,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
       return false;
     }
 
-    SQLCreateIndexStatement that = (SQLCreateIndexStatement) o;
+    var that = (SQLCreateIndexStatement) o;
 
     if (!Objects.equals(name, that.name)) {
       return false;
@@ -458,7 +453,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
 
   @Override
   public int hashCode() {
-    int result = name != null ? name.hashCode() : 0;
+    var result = name != null ? name.hashCode() : 0;
     result = 31 * result + (className != null ? className.hashCode() : 0);
     result = 31 * result + (propertyList != null ? propertyList.hashCode() : 0);
     result = 31 * result + (type != null ? type.hashCode() : 0);
@@ -477,7 +472,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
     protected SQLIdentifier collate;
 
     public Property copy() {
-      Property result = new Property();
+      var result = new Property();
       result.name = name == null ? null : name.copy();
       result.recordAttribute = recordAttribute == null ? null : recordAttribute.copy();
       result.byKey = byKey;
@@ -495,7 +490,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
         return false;
       }
 
-      Property property = (Property) o;
+      var property = (Property) o;
 
       if (byKey != property.byKey) {
         return false;
@@ -514,7 +509,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
 
     @Override
     public int hashCode() {
-      int result = name != null ? name.hashCode() : 0;
+      var result = name != null ? name.hashCode() : 0;
       result = 31 * result + (recordAttribute != null ? recordAttribute.hashCode() : 0);
       result = 31 * result + (byKey ? 1 : 0);
       result = 31 * result + (byValue ? 1 : 0);
@@ -526,7 +521,7 @@ public class SQLCreateIndexStatement extends DDLStatement {
      * returns the complete key to index, eg. property name or "property by key/value"
      */
     public String getCompleteKey() {
-      StringBuilder result = new StringBuilder();
+      var result = new StringBuilder();
       if (name != null) {
         result.append(name.getStringValue());
       } else if (recordAttribute != null) {
