@@ -3,12 +3,9 @@ package com.jetbrains.youtrack.db.internal.core.db;
 import static org.junit.Assert.assertTrue;
 
 import com.jetbrains.youtrack.db.api.DatabaseSession;
-import com.jetbrains.youtrack.db.api.exception.CommitSerializationException;
 import com.jetbrains.youtrack.db.api.exception.DatabaseException;
+import com.jetbrains.youtrack.db.api.exception.RecordNotFoundException;
 import com.jetbrains.youtrack.db.api.exception.SchemaException;
-import com.jetbrains.youtrack.db.api.query.Result;
-import com.jetbrains.youtrack.db.api.query.ResultSet;
-import com.jetbrains.youtrack.db.api.record.Entity;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
 import com.jetbrains.youtrack.db.api.record.Vertex;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
@@ -16,10 +13,9 @@ import com.jetbrains.youtrack.db.api.schema.Schema;
 import com.jetbrains.youtrack.db.api.schema.SchemaClass;
 import com.jetbrains.youtrack.db.internal.DbTestBase;
 import com.jetbrains.youtrack.db.internal.core.id.RecordId;
-import com.jetbrains.youtrack.db.internal.core.iterator.RecordIteratorClassDescendentOrder;
+import com.jetbrains.youtrack.db.internal.core.iterator.RecordIteratorClass;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.util.Collection;
-import java.util.List;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -27,163 +23,168 @@ public class DatabaseDocumentTxTest extends DbTestBase {
 
   @Test
   public void testCountClass() throws Exception {
+    var testSuperclass = session.getMetadata().getSchema().createClass("TestSuperclass");
+    session.getMetadata().getSchema().createClass("TestSubclass", testSuperclass);
 
-    SchemaClass testSuperclass = db.getMetadata().getSchema().createClass("TestSuperclass");
-    db.getMetadata().getSchema().createClass("TestSubclass", testSuperclass);
+    session.begin();
+    var toDelete = ((EntityImpl) session.newEntity("TestSubclass"));
+    toDelete.setProperty("id", 1);
 
-    db.begin();
-    EntityImpl toDelete = new EntityImpl("TestSubclass").field("id", 1);
-    toDelete.save();
-    db.commit();
+    session.commit();
 
     // 1 SUB, 0 SUPER
-    Assert.assertEquals(db.countClass("TestSubclass", false), 1);
-    Assert.assertEquals(db.countClass("TestSubclass", true), 1);
-    Assert.assertEquals(db.countClass("TestSuperclass", false), 0);
-    Assert.assertEquals(db.countClass("TestSuperclass", true), 1);
+    Assert.assertEquals(1, session.countClass("TestSubclass", false));
+    Assert.assertEquals(1, session.countClass("TestSubclass", true));
+    Assert.assertEquals(0, session.countClass("TestSuperclass", false));
+    Assert.assertEquals(1, session.countClass("TestSuperclass", true));
 
-    db.begin();
+    session.begin();
     try {
-      new EntityImpl("TestSuperclass").field("id", 1).save();
-      new EntityImpl("TestSubclass").field("id", 1).save();
+      session.newEntity("TestSuperclass").setProperty("id", 1);
+
+      session.newEntity("TestSubclass").setProperty("id", 1);
+
       // 2 SUB, 1 SUPER
 
-      Assert.assertEquals(db.countClass("TestSuperclass", false), 1);
-      Assert.assertEquals(db.countClass("TestSuperclass", true), 3);
-      Assert.assertEquals(db.countClass("TestSubclass", false), 2);
-      Assert.assertEquals(db.countClass("TestSubclass", true), 2);
+      Assert.assertEquals(1, session.countClass("TestSuperclass", false));
+      Assert.assertEquals(3, session.countClass("TestSuperclass", true));
+      Assert.assertEquals(2, session.countClass("TestSubclass", false));
+      Assert.assertEquals(2, session.countClass("TestSubclass", true));
 
-      db.bindToSession(toDelete).delete();
+      var activeTx = session.getActiveTransaction();
+      activeTx.<EntityImpl>load(toDelete).delete();
       // 1 SUB, 1 SUPER
 
-      Assert.assertEquals(db.countClass("TestSuperclass", false), 1);
-      Assert.assertEquals(db.countClass("TestSuperclass", true), 2);
-      Assert.assertEquals(db.countClass("TestSubclass", false), 1);
-      Assert.assertEquals(db.countClass("TestSubclass", true), 1);
+      Assert.assertEquals(1, session.countClass("TestSuperclass", false));
+      Assert.assertEquals(2, session.countClass("TestSuperclass", true));
+      Assert.assertEquals(1, session.countClass("TestSubclass", false));
+      Assert.assertEquals(1, session.countClass("TestSubclass", true));
     } finally {
-      db.commit();
+      session.commit();
     }
   }
 
   @Test
   public void testTimezone() {
 
-    db.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "Europe/Rome");
-    Object newTimezone = db.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
-    Assert.assertEquals(newTimezone, "Europe/Rome");
+    session.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "Europe/Rome");
+    var newTimezone = session.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
+    Assert.assertEquals("Europe/Rome", newTimezone);
 
-    db.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "foobar");
-    newTimezone = db.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
-    Assert.assertEquals(newTimezone, "GMT");
+    session.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "foobar");
+    newTimezone = session.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
+    Assert.assertEquals("GMT", newTimezone);
   }
 
-  @Test(expected = CommitSerializationException.class)
+  @Test(expected = RecordNotFoundException.class)
   public void testSaveInvalidRid() {
-    db.begin();
-    EntityImpl doc = new EntityImpl();
-    doc.field("test", new RecordId(-2, 10));
-    db.save(doc);
-    db.commit();
+    session.begin();
+    var doc = (EntityImpl) session.newEntity();
+    doc.setProperty("test", new RecordId(-2, 10));
+    session.commit();
   }
 
   @Test
   public void testCreateClass() {
-    SchemaClass clazz = db.createClass("TestCreateClass");
+    var clazz = session.createClass("TestCreateClass");
     Assert.assertNotNull(clazz);
     Assert.assertEquals("TestCreateClass", clazz.getName());
-    List<SchemaClass> superclasses = clazz.getSuperClasses(db);
+    var superclasses = clazz.getSuperClasses();
     if (superclasses != null) {
       assertTrue(superclasses.isEmpty());
     }
-    Assert.assertNotNull(db.getMetadata().getSchema().getClass("TestCreateClass"));
+    Assert.assertNotNull(session.getMetadata().getSchema().getClass("TestCreateClass"));
     try {
-      db.createClass("TestCreateClass");
+      session.createClass("TestCreateClass");
       Assert.fail();
     } catch (SchemaException ex) {
+      //ignore
     }
 
-    SchemaClass subclazz = db.createClass("TestCreateClass_subclass", "TestCreateClass");
+    var subclazz = session.createClass("TestCreateClass_subclass", "TestCreateClass");
     Assert.assertNotNull(subclazz);
     Assert.assertEquals("TestCreateClass_subclass", subclazz.getName());
-    List<SchemaClass> sub_superclasses = subclazz.getSuperClasses(db);
+    var sub_superclasses = subclazz.getSuperClasses();
     Assert.assertEquals(1, sub_superclasses.size());
-    Assert.assertEquals("TestCreateClass", sub_superclasses.get(0).getName());
+    Assert.assertEquals("TestCreateClass", sub_superclasses.getFirst().getName());
   }
 
   @Test
   public void testGetClass() {
-    db.createClass("TestGetClass");
+    session.createClass("TestGetClass");
 
-    SchemaClass clazz = db.getClass("TestGetClass");
+    var clazz = session.getClass("TestGetClass");
     Assert.assertNotNull(clazz);
     Assert.assertEquals("TestGetClass", clazz.getName());
-    List<SchemaClass> superclasses = clazz.getSuperClasses(db);
+    var superclasses = clazz.getSuperClasses();
     if (superclasses != null) {
       assertTrue(superclasses.isEmpty());
     }
 
-    SchemaClass clazz2 = db.getClass("TestGetClass_non_existing");
+    var clazz2 = session.getClass("TestGetClass_non_existing");
     Assert.assertNull(clazz2);
   }
 
   @Test
   public void testDocFromJsonEmbedded() {
-    Schema schema = db.getMetadata().getSchema();
+    Schema schema = session.getMetadata().getSchema();
 
-    SchemaClass c0 = schema.createClass("testDocFromJsonEmbedded_Class0");
+    var c0 = schema.createAbstractClass("testDocFromJsonEmbedded_Class0");
 
-    SchemaClass c1 = schema.createClass("testDocFromJsonEmbedded_Class1");
-    c1.createProperty(db, "account", PropertyType.STRING);
-    c1.createProperty(db, "meta", PropertyType.EMBEDDED, c0);
+    var c1 = schema.createClass("testDocFromJsonEmbedded_Class1");
+    c1.createProperty("account", PropertyType.STRING);
+    c1.createProperty("meta", PropertyType.EMBEDDED, c0);
 
-    db.begin();
-    EntityImpl doc = new EntityImpl("testDocFromJsonEmbedded_Class1");
+    session.begin();
+    var doc = (EntityImpl) session.newEntity("testDocFromJsonEmbedded_Class1");
 
-    doc.fromJSON(
-        "{\n"
-            + "    \"account\": \"#25:0\",\n"
-            + "    "
-            + "\"meta\": {"
-            + "   \"created\": \"2016-10-03T21:10:21.77-07:00\",\n"
-            + "        \"ip\": \"0:0:0:0:0:0:0:1\",\n"
-            + "   \"contentType\": \"application/x-www-form-urlencoded\","
-            + "   \"userAgent\": \"PostmanRuntime/2.5.2\""
-            + "},"
-            + "\"data\": \"firstName=Jessica&lastName=Smith\"\n"
-            + "}");
+    doc.updateFromJSON(
+        """
+            {
+                "account": "#25:0",
+                \
+            "meta": {\
+               "created": "2016-10-03T21:10:21.77-07:00",
+                    "ip": "0:0:0:0:0:0:0:1",
+               "contentType": "application/x-www-form-urlencoded",\
+               "userAgent": "PostmanRuntime/2.5.2"\
+            },\
+            "data": "firstName=Jessica&lastName=Smith"
+            }""");
 
-    db.save(doc);
-    db.commit();
+    session.commit();
 
-    try (ResultSet result = db.query("select from testDocFromJsonEmbedded_Class0")) {
-      Assert.assertEquals(result.stream().count(), 0);
+    session.begin();
+    try (var result = session.query("select from testDocFromJsonEmbedded_Class0")) {
+      Assert.assertEquals(0, result.stream().count());
     }
 
-    try (ResultSet result = db.query("select from testDocFromJsonEmbedded_Class1")) {
+    try (var result = session.query("select from testDocFromJsonEmbedded_Class1")) {
       Assert.assertTrue(result.hasNext());
-      Entity item = result.next().getEntity().get();
+      var item = result.next().asEntity();
       EntityImpl meta = item.getProperty("meta");
-      Assert.assertEquals(meta.getClassName(), "testDocFromJsonEmbedded_Class0");
-      Assert.assertEquals(meta.field("ip"), "0:0:0:0:0:0:0:1");
+      Assert.assertEquals("testDocFromJsonEmbedded_Class0", meta.getSchemaClassName());
+      Assert.assertEquals("0:0:0:0:0:0:0:1", meta.getProperty("ip"));
     }
+    session.commit();
   }
 
   @Test
   public void testCreateClassIfNotExists() {
-    db.createClass("TestCreateClassIfNotExists");
+    session.createClass("TestCreateClassIfNotExists");
 
-    SchemaClass clazz = db.createClassIfNotExist("TestCreateClassIfNotExists");
+    var clazz = session.createClassIfNotExist("TestCreateClassIfNotExists");
     Assert.assertNotNull(clazz);
     Assert.assertEquals("TestCreateClassIfNotExists", clazz.getName());
-    List<SchemaClass> superclasses = clazz.getSuperClasses(db);
+    var superclasses = clazz.getSuperClasses();
     if (superclasses != null) {
       assertTrue(superclasses.isEmpty());
     }
 
-    SchemaClass clazz2 = db.createClassIfNotExist("TestCreateClassIfNotExists_non_existing");
+    var clazz2 = session.createClassIfNotExist("TestCreateClassIfNotExists_non_existing");
     Assert.assertNotNull(clazz2);
     Assert.assertEquals("TestCreateClassIfNotExists_non_existing", clazz2.getName());
-    List<SchemaClass> superclasses2 = clazz2.getSuperClasses(db);
+    var superclasses2 = clazz2.getSuperClasses();
     if (superclasses2 != null) {
       assertTrue(superclasses2.isEmpty());
     }
@@ -191,163 +192,162 @@ public class DatabaseDocumentTxTest extends DbTestBase {
 
   @Test
   public void testCreateVertexClass() {
-    SchemaClass clazz = db.createVertexClass("TestCreateVertexClass");
+    var clazz = session.createVertexClass("TestCreateVertexClass");
     Assert.assertNotNull(clazz);
 
-    clazz = db.getClass("TestCreateVertexClass");
+    clazz = session.getClass("TestCreateVertexClass");
     Assert.assertNotNull(clazz);
     Assert.assertEquals("TestCreateVertexClass", clazz.getName());
-    List<SchemaClass> superclasses = clazz.getSuperClasses(db);
+    var superclasses = clazz.getSuperClasses();
     Assert.assertEquals(1, superclasses.size());
-    Assert.assertEquals("V", superclasses.get(0).getName());
+    Assert.assertEquals("V", superclasses.getFirst().getName());
   }
 
   @Test
   public void testCreateEdgeClass() {
-    SchemaClass clazz = db.createEdgeClass("TestCreateEdgeClass");
+    var clazz = session.createEdgeClass("TestCreateEdgeClass");
     Assert.assertNotNull(clazz);
 
-    clazz = db.getClass("TestCreateEdgeClass");
+    clazz = session.getClass("TestCreateEdgeClass");
     Assert.assertNotNull(clazz);
     Assert.assertEquals("TestCreateEdgeClass", clazz.getName());
-    List<SchemaClass> superclasses = clazz.getSuperClasses(db);
+    var superclasses = clazz.getSuperClasses();
     Assert.assertEquals(1, superclasses.size());
-    Assert.assertEquals("E", superclasses.get(0).getName());
+    Assert.assertEquals("E", superclasses.getFirst().getName());
   }
 
   @Test
   public void testVertexProperty() {
-    String className = "testVertexProperty";
-    db.createClass(className, "V");
+    var className = "testVertexProperty";
+    session.createClass(className, "V");
 
-    db.begin();
-    Vertex doc1 = db.newVertex(className);
+    session.begin();
+    var doc1 = session.newVertex(className);
     doc1.setProperty("name", "a");
-    doc1.save();
 
-    Vertex doc2 = db.newVertex(className);
+    var doc2 = session.newVertex(className);
     doc2.setProperty("name", "b");
     doc2.setProperty("linked", doc1);
-    doc2.save();
-    db.commit();
+    session.commit();
 
-    try (ResultSet rs = db.query("SELECT FROM " + className + " WHERE name = 'b'")) {
+    session.begin();
+    try (var rs = session.query("SELECT FROM " + className + " WHERE name = 'b'")) {
       Assert.assertTrue(rs.hasNext());
-      Result res = rs.next();
+      var res = rs.next();
 
-      Object linkedVal = res.getProperty("linked");
+      var linkedVal = res.getProperty("linked");
       Assert.assertTrue(linkedVal instanceof Identifiable);
-      Assert.assertTrue(
-          db.load(((Identifiable) linkedVal).getIdentity()) instanceof Identifiable);
+      session.load(((Identifiable) linkedVal).getIdentity());
 
-      Assert.assertTrue(res.toEntity().getProperty("linked") instanceof Vertex);
+      Assert.assertTrue(res.asEntityOrNull().getProperty("linked") instanceof Vertex);
     }
+    session.commit();
   }
 
   @Test
   public void testLinkEdges() {
-    String vertexClass = "testVertex";
-    String edgeClass = "testEdge";
-    SchemaClass vc = db.createClass(vertexClass, "V");
-    db.createClass(edgeClass, "E");
-    vc.createProperty(db, "out_testEdge", PropertyType.LINK);
-    vc.createProperty(db, "in_testEdge", PropertyType.LINK);
+    var vertexClass = "testVertex";
+    var edgeClass = "testEdge";
+    var vc = session.createClass(vertexClass, "V");
+    session.createClass(edgeClass, "E");
+    vc.createProperty("out_testEdge", PropertyType.LINK);
+    vc.createProperty("in_testEdge", PropertyType.LINK);
 
-    db.begin();
-    Vertex doc1 = db.newVertex(vertexClass);
+    session.begin();
+    var doc1 = session.newVertex(vertexClass);
     doc1.setProperty("name", "first");
-    doc1.save();
-    db.commit();
+    session.commit();
 
-    db.begin();
-    Vertex doc2 = db.newVertex(vertexClass);
+    session.begin();
+    var doc2 = session.newVertex(vertexClass);
     doc2.setProperty("name", "second");
-    doc2.save();
-    db.newRegularEdge(db.bindToSession(doc1), doc2, "testEdge").save();
-    db.commit();
+    var activeTx = session.getActiveTransaction();
+    session.newStatefulEdge(activeTx.load(doc1), doc2, "testEdge");
+    session.commit();
 
-    try (ResultSet rs = db.query("SELECT out() as o FROM " + vertexClass)) {
+    session.begin();
+    try (var rs = session.query("SELECT out() as o FROM " + doc1.getIdentity())) {
       Assert.assertTrue(rs.hasNext());
-      Result res = rs.next();
+      var res = rs.next();
 
-      Object linkedVal = res.getProperty("o");
+      var linkedVal = res.getProperty("o");
       Assert.assertTrue(linkedVal instanceof Collection);
-      Assert.assertEquals(((Collection) linkedVal).size(), 1);
+      Assert.assertEquals(1, ((Collection) linkedVal).size());
     }
+    session.commit();
   }
 
   @Test
   public void testLinkOneSide() {
-    String vertexClass = "testVertex";
-    String edgeClass = "testEdge";
-    SchemaClass vc = db.createClass(vertexClass, "V");
-    db.createClass(edgeClass, "E");
+    var vertexClass = "testVertexOneSide";
+    var edgeClass = "testEdge";
+    var vc = session.createClass(vertexClass, "V");
+    session.createClass(edgeClass, "E");
 
-    vc.createProperty(db, "out_testEdge", PropertyType.LINKBAG);
-    vc.createProperty(db, "in_testEdge", PropertyType.LINK);
+    vc.createProperty("out_testEdge", PropertyType.LINKBAG);
+    vc.createProperty("in_testEdge", PropertyType.LINK);
 
-    db.begin();
-    Vertex doc1 = db.newVertex(vertexClass);
+    session.begin();
+    var doc1 = session.newVertex(vertexClass);
     doc1.setProperty("name", "first");
-    doc1.save();
 
-    Vertex doc2 = db.newVertex(vertexClass);
+    var doc2 = session.newVertex(vertexClass);
     doc2.setProperty("name", "second");
-    doc2.save();
 
-    Vertex doc3 = db.newVertex(vertexClass);
+    var doc3 = session.newVertex(vertexClass);
     doc3.setProperty("name", "third");
-    doc3.save();
 
-    db.newRegularEdge(doc1, doc2, "testEdge").save();
-    db.newRegularEdge(doc1, doc3, "testEdge").save();
-    db.commit();
+    session.newStatefulEdge(doc1, doc2, "testEdge");
+    session.newStatefulEdge(doc1, doc3, "testEdge");
+    session.commit();
 
-    try (ResultSet rs = db.query("SELECT out() as o FROM " + vertexClass)) {
+    session.begin();
+    try (var rs = session.query("SELECT out() as o FROM " + doc1.getIdentity())) {
       Assert.assertTrue(rs.hasNext());
-      Result res = rs.next();
+      var res = rs.next();
 
-      Object linkedVal = res.getProperty("o");
+      var linkedVal = res.getProperty("o");
       Assert.assertTrue(linkedVal instanceof Collection);
-      Assert.assertEquals(((Collection) linkedVal).size(), 2);
+      Assert.assertEquals(2, ((Collection) linkedVal).size());
     }
+    session.commit();
   }
 
   @Test(expected = DatabaseException.class)
   public void testLinkDuplicate() {
-    String vertexClass = "testVertex";
-    String edgeClass = "testEdge";
-    SchemaClass vc = db.createClass(vertexClass, "V");
-    db.createClass(edgeClass, "E");
-    vc.createProperty(db, "out_testEdge", PropertyType.LINK);
-    vc.createProperty(db, "in_testEdge", PropertyType.LINK);
-    Vertex doc1 = db.newVertex(vertexClass);
-    doc1.setProperty("name", "first");
-    doc1.save();
+    var vertexClass = "testVertex";
+    var edgeClass = "testEdge";
+    var vc = session.createClass(vertexClass, "V");
+    session.createClass(edgeClass, "E");
+    vc.createProperty("out_testEdge", PropertyType.LINK);
+    vc.createProperty("in_testEdge", PropertyType.LINK);
 
-    Vertex doc2 = db.newVertex(vertexClass);
-    doc2.setProperty("name", "second");
-    doc2.save();
+    session.executeInTx(transaction -> {
+      var doc1 = session.newVertex(vertexClass);
+      doc1.setProperty("name", "first");
 
-    Vertex doc3 = db.newVertex(vertexClass);
-    doc3.setProperty("name", "third");
-    doc3.save();
+      var doc2 = session.newVertex(vertexClass);
+      doc2.setProperty("name", "second");
 
-    db.newRegularEdge(doc1, doc2, "testEdge");
-    db.newRegularEdge(doc1, doc3, "testEdge");
+      var doc3 = session.newVertex(vertexClass);
+      doc3.setProperty("name", "third");
+
+      session.newStatefulEdge(doc1, doc2, "testEdge");
+      session.newStatefulEdge(doc1, doc3, "testEdge");
+    });
   }
 
   @Test
   public void selectDescTest() {
-    String className = "bar";
-    Schema schema = db.getMetadata().getSchema();
+    var className = "bar";
+    var schema = session.getMetadata().getSchema();
     schema.createClass(className, 1, schema.getClass(SchemaClass.VERTEX_CLASS_NAME));
-    db.begin();
+    session.begin();
 
-    EntityImpl document = new EntityImpl(className);
-    document.save();
-    RecordIteratorClassDescendentOrder<EntityImpl> reverseIterator =
-        new RecordIteratorClassDescendentOrder<EntityImpl>(db, db, className, true);
+    var document = (EntityImpl) session.newVertex(className);
+
+    var reverseIterator =
+        new RecordIteratorClass(session, className, true, false);
     Assert.assertTrue(reverseIterator.hasNext());
     Assert.assertEquals(document, reverseIterator.next());
   }
