@@ -1,16 +1,14 @@
 package com.jetbrains.youtrack.db.auto;
 
-import com.jetbrains.youtrack.db.api.query.ResultSet;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
 import com.jetbrains.youtrack.db.api.schema.SchemaClass;
-import com.jetbrains.youtrack.db.internal.core.index.Index;
+import com.jetbrains.youtrack.db.internal.core.id.RecordId;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Stream;
 import org.testng.Assert;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.AfterMethod;
@@ -27,39 +25,38 @@ public class LinkListIndexTest extends BaseDBTest {
 
   @Parameters(value = "remote")
   public LinkListIndexTest(@Optional Boolean remote) {
-    // super(remote != null && remote);
-    super(true);
+    super(remote != null && remote);
   }
 
   @BeforeClass
   public void setupSchema() {
-    final SchemaClass linkListIndexTestClass =
-        database.getMetadata().getSchema().createClass("LinkListIndexTestClass");
+    final var linkListIndexTestClass =
+        session.getMetadata().getSchema().createClass("LinkListIndexTestClass");
 
-    linkListIndexTestClass.createProperty(database, "linkCollection", PropertyType.LINKLIST);
+    linkListIndexTestClass.createProperty("linkCollection", PropertyType.LINKLIST);
 
-    linkListIndexTestClass.createIndex(database,
+    linkListIndexTestClass.createIndex(
         "linkCollectionIndex", SchemaClass.INDEX_TYPE.NOTUNIQUE, "linkCollection");
   }
 
   @AfterClass
   public void destroySchema() {
-    database = acquireSession();
-    database.getMetadata().getSchema().dropClass("LinkListIndexTestClass");
+    session = acquireSession();
+    session.getMetadata().getSchema().dropClass("LinkListIndexTestClass");
   }
 
   @AfterMethod
   public void afterMethod() throws Exception {
-    database.begin();
-    database.command("DELETE FROM LinkListIndexTestClass").close();
-    database.commit();
+    session.begin();
+    session.execute("DELETE FROM LinkListIndexTestClass").close();
+    session.commit();
 
-    ResultSet result = database.query("select from LinkListIndexTestClass");
+    var result = session.query("select from LinkListIndexTestClass");
     Assert.assertEquals(result.stream().count(), 0);
 
-    if (!database.getStorage().isRemote()) {
-      final Index index = getIndex("linkCollectionIndex");
-      Assert.assertEquals(index.getInternal().size(database), 0);
+    if (!session.getStorage().isRemote()) {
+      final var index = getIndex("linkCollectionIndex");
+      Assert.assertEquals(index.size(session), 0);
     }
 
     super.afterMethod();
@@ -68,29 +65,26 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollection() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    session.commit();
+
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
 
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docTwo.getIdentity())) {
@@ -103,36 +97,34 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionInTx() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
-    database.commit();
+    final var docTwo = ((EntityImpl) session.newEntity());
+
+    session.commit();
 
     try {
-      database.begin();
-      final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-      document.field(
-          "linkCollection",
-          new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-      document.save();
-      database.commit();
+      session.begin();
+      final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+      document.setProperty("linkCollection",
+          session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
+
+      session.commit();
     } catch (Exception e) {
-      database.rollback();
+      session.rollback();
       throw e;
     }
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
 
         if (!key.getIdentity().equals(docOne.getIdentity()) && !key.equals(docTwo.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
@@ -144,38 +136,32 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdate() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docThree = new EntityImpl();
-    docThree.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docThree = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
 
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docThree.getIdentity())));
-    document.save();
-    database.commit();
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docThree.getIdentity())));
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    session.commit();
+
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docThree.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
@@ -187,46 +173,41 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateInTx() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docThree = new EntityImpl();
-    docThree.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docThree = ((EntityImpl) session.newEntity());
 
-    EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
+    var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    document.save();
-    database.commit();
+    session.commit();
 
     try {
-      database.begin();
-      document = database.bindToSession(document);
-      document.field(
-          "linkCollection",
-          new ArrayList<>(Arrays.asList(docOne.getIdentity(), docThree.getIdentity())));
-      document.save();
-      database.commit();
+      session.begin();
+      var activeTx = session.getActiveTransaction();
+      document = activeTx.load(document);
+      document.setProperty("linkCollection",
+          session.newLinkList(List.of(docOne.getIdentity(), docThree.getIdentity())));
+
+      session.commit();
     } catch (Exception e) {
-      database.rollback();
+      session.rollback();
       throw e;
     }
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
 
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docThree.getIdentity())) {
@@ -239,41 +220,36 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateInTxRollback() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docThree = new EntityImpl();
-    docThree.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docThree = ((EntityImpl) session.newEntity());
 
-    EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
+    var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    document.save();
-    database.commit();
+    session.commit();
 
-    database.begin();
-    document = database.bindToSession(document);
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docThree.getIdentity())));
-    document.save();
-    database.rollback();
+    session.begin();
+    var activeTx = session.getActiveTransaction();
+    document = activeTx.load(document);
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docThree.getIdentity())));
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    session.rollback();
+
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docTwo.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
@@ -285,42 +261,38 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateAddItem() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docThree = new EntityImpl();
-    docThree.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docThree = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    database.begin();
-    database
-        .command(
+    session.commit();
+
+    session.begin();
+    session
+        .execute(
             "UPDATE "
                 + document.getIdentity()
                 + " set linkCollection = linkCollection || "
                 + docThree.getIdentity())
         .close();
-    database.commit();
+    session.commit();
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 3);
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 3);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docTwo.getIdentity())
             && !key.getIdentity().equals(docThree.getIdentity())) {
@@ -333,43 +305,39 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateAddItemInTx() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docThree = new EntityImpl();
-    docThree.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docThree = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
+
+    session.commit();
 
     try {
-      database.begin();
-      EntityImpl loadedDocument = database.load(document.getIdentity());
-      loadedDocument.<List<Identifiable>>field("linkCollection").add(docThree.getIdentity());
-      loadedDocument.save();
-      database.commit();
+      session.begin();
+      EntityImpl loadedDocument = session.load(document.getIdentity());
+      loadedDocument.<List<Identifiable>>getProperty("linkCollection").add(docThree.getIdentity());
+
+      session.commit();
     } catch (Exception e) {
-      database.rollback();
+      session.rollback();
       throw e;
     }
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 3);
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 3);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docTwo.getIdentity())
             && !key.getIdentity().equals(docThree.getIdentity())) {
@@ -382,38 +350,34 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateAddItemInTxRollback() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docThree = new EntityImpl();
-    docThree.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docThree = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    database.begin();
-    EntityImpl loadedDocument = database.load(document.getIdentity());
-    loadedDocument.<List<Identifiable>>field("linkCollection").add(docThree.getIdentity());
-    loadedDocument.save();
-    database.rollback();
+    session.commit();
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    session.begin();
+    EntityImpl loadedDocument = session.load(document.getIdentity());
+    loadedDocument.<List<Identifiable>>getProperty("linkCollection").add(docThree.getIdentity());
+
+    session.rollback();
+
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docTwo.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
@@ -425,40 +389,37 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateRemoveItemInTx() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
+
+    session.commit();
 
     try {
-      database.begin();
-      EntityImpl loadedDocument = database.load(document.getIdentity());
-      loadedDocument.<List>field("linkCollection").remove(docTwo.getIdentity());
-      loadedDocument.save();
-      database.commit();
+      session.begin();
+      EntityImpl loadedDocument = session.load(document.getIdentity());
+      loadedDocument.<List>getProperty("linkCollection").remove(docTwo.getIdentity());
+
+      session.commit();
     } catch (Exception e) {
-      database.rollback();
+      session.rollback();
       throw e;
     }
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 1);
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 1);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
         }
@@ -469,35 +430,32 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateRemoveItemInTxRollback() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    database.begin();
-    EntityImpl loadedDocument = database.load(document.getIdentity());
-    loadedDocument.<List>field("linkCollection").remove(docTwo.getIdentity());
-    loadedDocument.save();
-    database.rollback();
+    session.commit();
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    session.begin();
+    EntityImpl loadedDocument = session.load(document.getIdentity());
+    loadedDocument.<List>getProperty("linkCollection").remove(docTwo.getIdentity());
+
+    session.rollback();
+
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docTwo.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
@@ -509,34 +467,31 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionUpdateRemoveItem() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    database.begin();
-    database.command(
+    session.commit();
+
+    session.begin();
+    session.execute(
         "UPDATE " + document.getIdentity() + " remove linkCollection = " + docTwo.getIdentity());
-    database.commit();
+    session.commit();
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 1);
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 1);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
 
         if (!key.getIdentity().equals(docOne.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
@@ -548,92 +503,86 @@ public class LinkListIndexTest extends BaseDBTest {
   public void testIndexCollectionRemove() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    database.begin();
-    document = database.bindToSession(document);
+    session.commit();
+
+    session.begin();
+    var activeTx = session.getActiveTransaction();
+    document = activeTx.load(document);
     document.delete();
-    database.commit();
+    session.commit();
 
-    Index index = getIndex("linkCollectionIndex");
+    var index = getIndex("linkCollectionIndex");
 
-    Assert.assertEquals(index.getInternal().size(database), 0);
+    Assert.assertEquals(index.size(session), 0);
   }
 
   public void testIndexCollectionRemoveInTx() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
+
+    session.commit();
 
     try {
-      database.begin();
-      document = database.bindToSession(document);
+      session.begin();
+      var activeTx = session.getActiveTransaction();
+      document = activeTx.load(document);
       document.delete();
-      database.commit();
+      session.commit();
     } catch (Exception e) {
-      database.rollback();
+      session.rollback();
       throw e;
     }
 
-    Index index = getIndex("linkCollectionIndex");
-    Assert.assertEquals(index.getInternal().size(database), 0);
+    var index = getIndex("linkCollectionIndex");
+    Assert.assertEquals(index.size(session), 0);
   }
 
   public void testIndexCollectionRemoveInTxRollback() {
     checkEmbeddedDB();
 
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    database.begin();
-    database.bindToSession(document).delete();
-    database.rollback();
+    session.commit();
 
-    Index index = getIndex("linkCollectionIndex");
+    session.begin();
+    var activeTx = session.getActiveTransaction();
+    activeTx.<EntityImpl>load(document).delete();
+    session.rollback();
 
-    Assert.assertEquals(index.getInternal().size(database), 2);
+    var index = getIndex("linkCollectionIndex");
+
+    Assert.assertEquals(index.size(session), 2);
 
     Iterator<Object> keyIterator;
-    try (Stream<Object> indexKeyStream = index.getInternal().keyStream()) {
+    try (var indexKeyStream = index.keyStream()) {
       keyIterator = indexKeyStream.iterator();
 
       while (keyIterator.hasNext()) {
-        Identifiable key = (Identifiable) keyIterator.next();
+        var key = (Identifiable) keyIterator.next();
         if (!key.getIdentity().equals(docOne.getIdentity())
             && !key.getIdentity().equals(docTwo.getIdentity())) {
           Assert.fail("Unknown key found: " + key);
@@ -643,26 +592,25 @@ public class LinkListIndexTest extends BaseDBTest {
   }
 
   public void testIndexCollectionSQL() {
-    database.begin();
-    final EntityImpl docOne = new EntityImpl();
-    docOne.save(database.getClusterNameById(database.getDefaultClusterId()));
+    session.begin();
+    final var docOne = ((EntityImpl) session.newEntity());
 
-    final EntityImpl docTwo = new EntityImpl();
-    docTwo.save(database.getClusterNameById(database.getDefaultClusterId()));
+    final var docTwo = ((EntityImpl) session.newEntity());
 
-    final EntityImpl document = new EntityImpl("LinkListIndexTestClass");
-    document.field(
-        "linkCollection",
-        new ArrayList<>(Arrays.asList(docOne.getIdentity(), docTwo.getIdentity())));
-    document.save();
-    database.commit();
+    final var document = ((EntityImpl) session.newEntity("LinkListIndexTestClass"));
+    document.setProperty("linkCollection",
+        session.newLinkList(List.of(docOne.getIdentity(), docTwo.getIdentity())));
 
-    ResultSet result =
-        database.query(
+    session.commit();
+
+    session.begin();
+    var result =
+        session.query(
             "select * from LinkListIndexTestClass where linkCollection contains ?",
             docOne.getIdentity());
     Assert.assertEquals(
         Arrays.asList(docOne.getIdentity(), docTwo.getIdentity()),
         result.next().<List>getProperty("linkCollection"));
+    session.commit();
   }
 }
